# CORE-Comprehensive_Open_Roleplay_Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
